--- a/Colab/Google_Colab_Tutorial.ipynb
+++ b/Colab/Google_Colab_Tutorial.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ga642381/ML2021-Spring/blob/main/Colab/Google_Colab_Tutorial.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/hanghoo/ML2021-Spring/blob/main/Colab/Google_Colab_Tutorial.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -43,17 +43,17 @@
         "id": "xIN7RF4wjgHk"
       },
       "source": [
-        "<p><img alt=\"Colaboratory logo\" height=\"45px\" src=\"/img/colab_favicon.ico\" align=\"left\" hspace=\"10px\" vspace=\"0px\"></p>\r\n",
-        "\r\n",
-        "<h1>What is Colaboratory?</h1>\r\n",
-        "\r\n",
-        "Colaboratory, or \"Colab\" for short, allows you to write and execute Python in your browser, with \r\n",
-        "- Zero configuration required\r\n",
-        "- Free access to GPUs\r\n",
-        "- Easy sharing\r\n",
-        "\r\n",
-        "Whether you're a **student**, a **data scientist** or an **AI researcher**, Colab can make your work easier. Watch [Introduction to Colab](https://www.youtube.com/watch?v=inN8seMm7UI) to learn more, or just get started below!\r\n",
-        "\r\n",
+        "<p><img alt=\"Colaboratory logo\" height=\"45px\" src=\"/img/colab_favicon.ico\" align=\"left\" hspace=\"10px\" vspace=\"0px\"></p>\n",
+        "\n",
+        "<h1>What is Colaboratory?</h1>\n",
+        "\n",
+        "Colaboratory, or \"Colab\" for short, allows you to write and execute Python in your browser, with \n",
+        "- Zero configuration required\n",
+        "- Free access to GPUs\n",
+        "- Easy sharing\n",
+        "\n",
+        "Whether you're a **student**, a **data scientist** or an **AI researcher**, Colab can make your work easier. Watch [Introduction to Colab](https://www.youtube.com/watch?v=inN8seMm7UI) to learn more, or just get started below!\n",
+        "\n",
         "You can type python code in the code block, or use a leading exclamation mark ! to change the code block to bash environment to execute linux code."
       ]
     },
@@ -63,8 +63,8 @@
         "id": "IrAxlhp3VBMD"
       },
       "source": [
-        "To utilize the free GPU provided by google, click on \"Runtime\"(執行階段) -> \"Change Runtime Type\"(變更執行階段類型). There are three options under \"Hardward Accelerator\"(硬體加速器), select \"GPU\". \r\n",
-        "* Doing this will restart the session, so make sure you change to the desired runtime before executing any code.\r\n"
+        "To utilize the free GPU provided by google, click on \"Runtime\"(執行階段) -> \"Change Runtime Type\"(變更執行階段類型). There are three options under \"Hardward Accelerator\"(硬體加速器), select \"GPU\". \n",
+        "* Doing this will restart the session, so make sure you change to the desired runtime before executing any code.\n"
       ]
     },
     {
@@ -141,9 +141,9 @@
         "id": "dOQxjfAZAsys"
       },
       "source": [
-        "It can be seen that `Minori.jpg` is saved the the current working directory. \r\n",
-        "\r\n",
-        "The working space is temporary, once you close the browser, the file will be gone.\r\n"
+        "It can be seen that `Minori.jpg` is saved the the current working directory. \n",
+        "\n",
+        "The working space is temporary, once you close the browser, the file will be gone.\n"
       ]
     },
     {
@@ -247,10 +247,10 @@
         "id": "UT0TEPRS7KF6"
       },
       "source": [
-        "%cd /content/drive/MyDrive \r\n",
-        "#change directory to google drive\r\n",
-        "!mkdir ML2021 #make a directory named ML2021\r\n",
-        "%cd ./ML2021 \r\n",
+        "%cd /content/drive/MyDrive \n",
+        "#change directory to google drive\n",
+        "!mkdir ML2021 #make a directory named ML2021\n",
+        "%cd ./ML2021 \n",
         "#change directory to ML2021"
       ],
       "execution_count": null,
@@ -291,7 +291,7 @@
         "id": "b39YMYicASvP"
       },
       "source": [
-        "# Download the file with file_id \"1duQU7xqXRsOSPYeOR0zLiSA8g_LCFzoV\", and rename it to Minori.jpg\r\n",
+        "# Download the file with file_id \"1duQU7xqXRsOSPYeOR0zLiSA8g_LCFzoV\", and rename it to Minori.jpg\n",
         "!gdown --id '1duQU7xqXRsOSPYeOR0zLiSA8g_LCFzoV' --output Minori.jpg"
       ],
       "execution_count": null,
